<resources>
    <string name="app_name">Just To Do</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to Just Todo!</string>
    <string name="slide_1_desc">Create an account to save your tasks and access them anywhere. Forever.</string>

    <string name="slide_2_title">Organize work and life</string>
    <string name="slide_2_desc">Organize and prioritize all your tasks and projects so you can live more and stress less</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_task_menu_item">AddTaskMenuItem</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_add_task">AddTaskActivity</string>


    <string name="facebook_app_id">2023020101342644</string>
    <string name="fb_login_protocol_scheme">fb2023020101342644</string>

    <string name="firebase_web_client_id">312575106278-08ootp0itkl3fsnr1738mmjj0kpano83.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="today_task_fragment">Today</string>
    <string name="alltasks_task_fragment">All Tasks</string>
    <string name="home_task_fragment">Home</string>
    <string name="work_task_fragment">Work</string>
    <string name="personal_task_fragment">Personal</string>
    <string name="store_task_fragment">Store</string>
    <string name="aboutapp_activity">About App</string>

    <!-- Category Items Alert -->
    <string-array name="category_items">
        <item>@string/home_task_fragment</item>
        <item>@string/work_task_fragment</item>
        <item>@string/personal_task_fragment</item>
        <item>@string/store_task_fragment</item>
    </string-array>

    <string name="action_filter">OK</string>
    <string name="snackbartaskisempty">Task is empty!</string>
    <string name="snackbattaskwelldone">Well done!</string>
    <string name="messageremovedfromtask">removed from task!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_just_to_do_user">Just To Do</string>
    <string name="empty_user">Just User</string>

    <string name="just_about_app">About</string>
    <string name="just_about_app_text">You can to save your tasks and access them anywhere.
        Organize and prioritize all your tasks and projects so you can live more and stress less</string>
    <string name="just_version">Version</string>
    <string name="just_version_text">1.0</string>
        <string name="just_developer">Developer</string>
    <string name="just_developer_text">Dima Yamschikov</string>
    <string name="just_feedback">Feedback</string>
    <string name="just_feedback_text">yamschikovdima@gmail.com</string>
    <string name="email_to_feedback">yamschikovdima@gmail.com</string>
    <string name="feedback_title">Your feedback:</string>
    <string name="feedbackGradeUrl">https://play.google.com/store/apps</string>

</resources>
